# lab_5

./: CMakeLists.txt  build.bat
include/: complex_type.h  fixed_memory_resource.h  fixed_stack.h
src/: fixed_memory_resource.cpp  main.cpp
tests/: test_main.cpp
